Fix home page letter spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,7 +42,7 @@ body {
 	h1 {
 		text-align: right;
 		padding-right: 100px;
-		letter-spacing: 3px;
+		letter-spacing: 1px;
 	}
 	p {
 		letter-spacing: 1px;
